--- a/SafeTodoExample/Tests/SafeTodoExample.Tests.iOS/SafeTodoExample.Tests.iOS.csproj
+++ b/SafeTodoExample/Tests/SafeTodoExample.Tests.iOS/SafeTodoExample.Tests.iOS.csproj
@@ -131,6 +131,9 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Acr.UserDialogs">
+      <Version>7.0.1</Version>
+    </PackageReference>
     <PackageReference Include="MaidSafe.SafeApp">
       <Version>0.2.0</Version>
     </PackageReference>
