--- a/SafeTodoExample/Tests/SafetodoExample.Tests.Android/SafetodoExample.Tests.Android.csproj
+++ b/SafeTodoExample/Tests/SafetodoExample.Tests.Android/SafetodoExample.Tests.Android.csproj
@@ -74,6 +74,9 @@
     <None Include="Properties\AndroidManifest.xml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Acr.UserDialogs">
+      <Version>7.0.1</Version>
+    </PackageReference>
     <PackageReference Include="MaidSafe.SafeApp">
       <Version>0.2.0</Version>
     </PackageReference>
