--- a/SafeTodoExample/SafeTodoExample/SafeTodoExample/SafeTodoExample.csproj
+++ b/SafeTodoExample/SafeTodoExample/SafeTodoExample/SafeTodoExample.csproj
@@ -4,11 +4,11 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+  <PropertyGroup Condition="'$(Configuration)'=='Debug'">
     <DefineConstants>TRACE;SAFE_APP_MOCK</DefineConstants>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+  <PropertyGroup Condition="'$(Configuration)'=='Release'">
     <DefineConstants>TRACE;SAFE_APP_MOCK</DefineConstants>
   </PropertyGroup>
 
