--- a/SafeTodoExample/SafeTodoExample/SafeTodoExample.iOS/SafeTodoExample.iOS.csproj
+++ b/SafeTodoExample/SafeTodoExample/SafeTodoExample.iOS/SafeTodoExample.iOS.csproj
@@ -20,7 +20,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\iPhoneSimulator\Debug</OutputPath>
-    <DefineConstants>DEBUG;__IOS__;__MOBILE__;__UNIFIED__;SAFE_APP_MOCK</DefineConstants>
+    <DefineConstants>DEBUG;__IOS__;__MOBILE__;__UNIFIED__;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
