--- a/SafeTodoExample/SafeTodoExample/SafeTodoExample/SafeTodoExample.csproj
+++ b/SafeTodoExample/SafeTodoExample/SafeTodoExample/SafeTodoExample.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)'=='Debug'">
-    <DefineConstants>TRACE;SAFE_APP_MOCK</DefineConstants>
+    <DefineConstants>TRACE</DefineConstants>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)'=='Release'">
